stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_could_not_determine_response_err_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "5ad517322daee7a5aaca3c7cbbc0bcdefa9a3445e082cd183f627f5bc844e123",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "31d278804af8946a0569a0c600cface8cae1800ab85a4bd42030f293829e36b3",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6425fa6b2831ceda4234543736c8596ba2089e2e256ba007f943d1671c07ecbe",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "885d8eb9418e92aed2a23f687ef212467bf180a3a6db9122379beee2a28a3c14",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4116b8c4d0fef912dece04c6fe52ce0f85f445d54fdfbceee531c9ebdcd24854",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9bdbf51cee7221e7f146e11f567ab2e61cc9cc64c2b349f3a25776342a29c69f",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1c5d1b3aa4e92af5c3abdd7663eb343d0070a7008d252a52976e27d8c7d9b5ba",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
]
