stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_could_not_determine_response_ok_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d696f9e3001bc26426552d727c8df876f826c6ee62de3bdd271a588ea636c30c",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c1b3efe4d67331570aba23a38b90471ca9a6a4eaa2fc536975e7db58b909e042",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b26050497517e265e84d62717e56ce22b83e394a6bb846f427113c0f011669be",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "19623da1d1c58eb71a73ab4c8e10a1a7d8db0131ca32b09e89e7d88e6c24b1a0",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "43984fbc202a2773ada998f14b31b0aa7eed0b7d67d57aa69e860852aa8a88bc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8a8fd6ce5ceb10aa35546edd2499d7ea254d97bbdb200fdec5372c4ce97d1c1b",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7813a3446b6c8ff9c99eb29773dd589f005d95789364cef83f83d7e8efcb9ad9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
]
