stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_could_not_determine_serialization_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "e42a364d71fefb6651501389af27fe307a5de13c4e8dee3c86cc8ef3e5e34cbb",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'to-consensus-buff?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 7374,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 7374,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4f945895f61123311c1ab22d52a5d01c60e638370766cf0f9f1b1d457f68788e",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: could not determine the input type for the serialization function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 7759,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 7759,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8551543cd5309b05a5b348b8f535b0d753113af4a057780a92ecd891f63d93c5",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: could not determine the input type for the serialization function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 7759,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 7759,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "95def3c2080fc1544ae1c8a78baebafc204dff612da3203101b78d84e642103c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'to-consensus-buff?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 7374,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 7374,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "33d20fd2dec9f2ecdfb957d3108c9ac4c192d560a6deeb84a0a3770472a671e3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: could not determine the input type for the serialization function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 7759,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 7759,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f0954d1da1dc842483b2b91410221845cbccde66120ab93ca989cdc0854da7a1",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: could not determine the input type for the serialization function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 7759,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 7759,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0cc70e0c69e266c28a0c97522105962a9d235745b6f04c403895618ac84e72c3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: serialization-type-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: could not determine the input type for the serialization function) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 7759,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 7759,
    ),
  )),
]
