stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_default_types_must_match.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "c0bd2968cf958ae46b24c81fd989f0165bc492df4da9d6fc7a56b59026e148e3",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e712b94beac0f4491dcbaff5e74ce49327475643b02645cd73cce65da0680188",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "68f5a9d95b112e6be0d0823610db5192d421273ec13c446b2d2d06f6599f37df",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "27abb4db7cd1a35809c9bb60ad15d944b49b28c9ca91664473ac9d1273f48b15",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f4c54d14eeeb8f35dca1eaa1e0a3421339b9f32e228cc72557504ab18e67083e",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e1265b3e5fd5ada33656b911882bdb4f7a89d3af59e4a6bad9d7e220f53e1bac",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "72dd2b8fab3c0f26a0bf44d9847a7018a1d960d98328f150c4d105d241a84386",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: default-types-must-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expression types passed in \'default-to\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 28,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4991,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 28,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4991,
    ),
  )),
]
